tools/fleet/fixtures/packets/invalid/unknown-worktree.case
source=valid-work.packet
mutation=set Worktree to UNKNOWN
expected=invalid
